- Added support for multi command chaining.
- Added support for defaults on options with `multiple` and
  options and arguments with `nargs != 1`.
- label passed to `progressbar` is no longer rendered with
  whitespace stripped.
- added a way to disable the standalone mode of the `main`
  method on a Click command to be able to handle errors better.

Version 2.6
-----------

(bugfix release, released on August 11th 2014)

- Fixed an issue where the wrapped streams on Python 3 would be reporting
  incorrect values for seekable.

Version 2.5
-----------

(bugfix release, released on July 28th 2014)

- Fixed a bug with text wrapping on Python 3.

Version 2.4
-----------

(bugfix release, released on July 4th 2014)

- Corrected a bug in the change of the help option in 2.3.

Version 2.3
-----------

(bugfix release, released on July 3rd 2014)

- Fixed an incorrectly formatted help record for count options.'
- Add support for ansi code stripping on Windows if colorama
  is not available.
- restored the Click 1.0 handling of the help parameter for certain
  edge cases.

Version 2.2
-----------

(bugfix release, released on June 26th 2014)

- fixed tty detection on PyPy.
- fixed an issue that progress bars were not rendered when the
  context manager was entered.

Version 2.1
-----------

(bugfix release, released on June 14th 2014)

- fixed the :func:`launch` function on windows.
- improved the colorama support on windows to try hard to not
  screw up the console if the application is interrupted.
- fixed windows terminals incorrectly being reported to be 80
  characters wide instead of 79
- use colorama win32 bindings if available to get the correct
  dimensions of a windows terminal.
- fixed an issue with custom function types on Python 3.
- fixed an issue with unknown options being incorrectly reported
  in error messages.

Version 2.0
-----------

(codename "tap tap tap", released on June 6th 2014)

- added support for opening stdin/stdout on Windows in