@@ -29,6 +29,7 @@ Version 3.0
   whitespace stripped.
 - added a way to disable the standalone mode of the `main`
   method on a Click command to be able to handle errors better.
+- Click supports tab-completion for prompts now.
 
 Version 2.6
 -----------
